Added in a model loader and moved the fragment and vertex shaders to the resource directory.